--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^2.11.0",
+    "nedb": "^1.8.0",
     "uuid": "^7.0.2"
   },
   "devDependencies": {
